k3s/generated_manifests/vaultwarden/Namespace-vaultwarden.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: vaultwarden
