k3s/generated_manifests/vaultwarden/Service-vaultwarden-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: vaultwarden.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: vaultwarden-tailscale
  namespace: vaultwarden
spec:
  clusterIP: None
  type: ClusterIP
