k3s/generated_manifests/vaultwarden/Ingress-vaultwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ingressClassName: traefik
  rules:
    - host: vaultwarden.doma.lol
