k3s/generated_manifests/vaultwarden/IngressRoute-vaultwarden.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vaultwarden.doma.lol`)
      services:
        - name: vaultwarden
          port: 80
